# opengl_rend_rs

./: Cargo.toml  clippy.toml
examples/: triangle.rs
examples/cube/: frag.frag  main.rs  vert.vert
examples/moving_triangle/: frag.frag  main.rs  vert.vert
examples/multiple_objects/: main.rs  vert.vert
examples/oriented/: color_mult_uniform.frag  main.rs  pos_color_local_transform.vert
examples/oriented/meshes/: LargeGimbal.xml  MediumGimbal.xml  Ship.xml  SmallGimbal.xml  UnitPlane.xml
examples/transform/: main.rs  vert.vert
examples/triangle/: main.rs  vert.vert
examples/world/: base_color.frag  main.rs  only_pos_world_transform.vert  only_pos_world_transformUBO.vert  passthrough_color.frag  pos_color_world_transform.vert  pos_color_world_transformUBO.vert
examples/world/meshes/: UnitCone.xml  UnitConeTint.xml  UnitCubeTint.xml  UnitCylinderTint.xml  meshFormat.rnc
resources/test/: UnitCube.xml  UnitCubeColor.xml  UnitCylinder.xml  UnitPlane.xml
src/: app.rs  buffer.rs  frag.frag  frag.glsl  lib.rs  main.rs  matrix_stack.rs  mesh.rs  nodetree.rs  opengl.rs  program.rs  uniforms.rs  vertex_attributes.rs
