[package]
name = "opengl-rend"
version = "0.1.0"
edition = "2021"


[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
cargo_package_description = "allow"
multiple_crate_versions = { level = "warn", allowed-duplicate-crates = [
    "bytemuck",
    "bitflags",
] }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
struct_field_names = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"


[dependencies]
bitflags = "2.9.0"
bytemuck = "1.22.0"
gl = "0.14.0"
glam = { version = "0.30.1", features = ["bytemuck"] }
glfw = "0.59.0"
thiserror = "2.0.12"
xml = "0.8.20"
